# ModbusTCP

./: CMakeLists.txt  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUCCESS.md  IMPLEMENTATION_SUMMARY.md  MQTT_IMPLEMENTATION_COMPLETE.md  MQTT_TLS_IMPLEMENTATION.md  README.md  README_BUTTON_RESET.md  README_JSON_UPLOAD.md  README_MIGRATION.md  README_MODULAR_CONFIG.md  README_MQTT.md  README_NETWORK_CONFIG.md  README_NEW_CONFIG_STRUCTURE.md  README_NVS_BACKUP_SYSTEM.md  README_UPLOAD_SYSTEM_FIXED.md  README_WIFI_MANAGER.md  partitions.csv  platformio.ini  sdkconfig.az-delivery-devkit-v4  sdkconfig.esp32dev  sdkconfig.esp32dev.old  test_mqtt_config.json  test_rtu_config.json
components/: CMakeLists.txt
components/ModbusTcpSlave/: CMakeLists.txt
components/freemodbus/modbus/: mb.c
components/freemodbus/modbus/include/: mbconfig.h
components/freemodbus/port/: config_fmb.h  debug_log.h  port_tcp_config.h  portserial_m.c
data/: config.json
data/config/: ap_config.json  network_config.json  rtu_config.json  sta_config.json  tcp_config.json
data/css/: styles.css
data/html/: admin.html  ap-config.html  config.html  config_device.html  confirmation.html  exit.html  index.html  index2.html  info.html  login_invalid.html  modbus.html  modbus_saved.html  mode_saved.html  mqtt_config.html  mqtt_config.html.bak  reset.html  unit_values.html  wifi-scan.html  wifi-status.html  wifi.html  wifi_connection_test.html  wifi_credentials_saved.html  wifi_manual.html  wifi_scanning.html  wifi_select.html  wifi_select_template.html
data/js/: ap-config.js  auto_reload.js  config_manager.js  confirmation.js  scripts.js  wifi-scan.js  wifi-status.js  wifi_selection.js  wifi_status_checker.js
examples/: ap_config_example.json  config_examples.c  mqtt_config_example.json  network_config_example.json  rtu_config_example.json  sta_config_example.json
include/: config_manager.h  event_bus.h  modbus_config.h  modbus_manager.h  modbus_map.h  modbus_params.h  modbus_register_sync.h  modbus_slave_task.h  modbus_task.h  mqtt_client_task.h  other_task.h  oxygen_sensor_task.h  queue_manager.h  webserver.h  wifi_manager.h
lib/ModbusTcpSlave/: CMakeLists.txt  Kconfig  README.md  library.json
lib/ModbusTcpSlave/examples/: modbus_tcp_example.h
lib/ModbusTcpSlave/freemodbus/modbus/ascii/: mbascii.c  mbascii_m.c
lib/ModbusTcpSlave/include/: modbus_tcp_slave.h
lib/ModbusTcpSlave/src/: modbus_tcp_slave.c
lib/PID/src/: PID.c  PID.h
lib/adcRio/src/: adcRio.c  adcRio.h
lib/cj125/src/: cj125.c  cj125.h  combustao3v0.code-workspace
lib/controle/src/: controle.c  controle.h
lib/dacMC/src/: dacMC.c  dacMC.h
lib/factory_reset/docs/: INTEGRATION_GUIDE.c  README.md
lib/factory_reset/examples/: factory_reset_example.c
lib/factory_reset/src/: factory_reset.c  factory_reset.h
lib/filas/src/: filas.c  filas.h
lib/globalvar/src/: globalvar.c  globalvar.h
lib/sonda/src/: sonda.c  sonda.h
src/: config_manager.c  main.c  modbus_manager.c  modbus_params.c  modbus_register_sync.c  modbus_slave_task.c  modbus_tcp_slave.c  mqtt_client_task.c  other_task.c  oxygen_sensor_task.c  queue_manager.c  webserver.c  webserver.c.bak  wifi_manager.c
test/: test_tcp.c
